# glotctl

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  _typos.toml  dist-workspace.toml  justfile  release.toml
.cargo/: config.toml
.github/workflows/: ci.yml  create-release-tag.yml  npm-publish.yml
docs/: configuration.mdx  directives.mdx  docs.json  faq.mdx  how-it-works.mdx  introduction.mdx  quickstart.mdx
docs/agents/: mcp.mdx  skill.mdx
docs/commands/: baseline.mdx  check.mdx  clean.mdx  fix.mdx  init.mdx  serve.mdx
docs/detection/: hardcoded-text.mdx  missing-keys.mdx  orphan-keys.mdx  replica-lag.mdx  translation-props.mdx  type-mismatch.mdx  unresolved-keys.mdx  untranslated.mdx  unused-keys.mdx
docs/mcp/: overview.mdx
examples/: README.md
examples/all-issues/: .glotrc.json  README.md
examples/all-issues/messages/: en.json  es.json  zh.json
examples/clean/: .glotrc.json  README.md
examples/clean/messages/: en.json  zh.json
examples/real-world/: .glotrc.json  README.md
examples/real-world/messages/: en.json  zh.json
scripts/: ci.sh  push-release-tag.sh  release.sh
skills/glot-i18n/: SKILL.md
skills/glot-i18n/references/: EXAMPLES.md
src/: args.rs  config.rs  directives.rs  file_scanner.rs  issue.rs  issues.rs  json_editor.rs  json_writer.rs  lib.rs  main.rs  report.rs  reporter.rs  utils.rs
src/actions/: delete_key.rs  insert_disable_comment.rs  insert_message_keys.rs  json_editor.rs  mod.rs  operation.rs  traits.rs
src/analysis/: context.rs  key_usage.rs  mod.rs  resolve.rs
src/analysis/collect/: types.rs
src/analysis/data/: comment_style.rs  message.rs  mod.rs  source.rs  type_mismatch.rs  value_type.rs
src/analysis/extract/: binding_context.rs  file_analyzer.rs  raw_call.rs  tests.rs  value_analyzer.rs  (+1 more)
src/checkers/: file_analyzer.rs  hardcoded.rs  key_objects.rs  mod.rs  registry_collector.rs  schema.rs  translation_calls.rs  value_analyzer.rs
src/cli/: args.rs  exit_code.rs  exit_status.rs  mod.rs  report.rs  run.rs
src/commands/: baseline.rs  baseline.rs.bak  check.rs  check.rs.bak  clean.rs  clean.rs.bak  context.rs  fix.rs  fix.rs.bak  helper.rs  mod.rs  run_result.rs  runner.rs  runner.rs.bak  shared.rs
src/core/: context.rs  file_scanner.rs  key_usage.rs  mod.rs  module_resolver.rs  resolve.rs
src/extraction/: key_usage.rs  mod.rs  pipeline.rs  resolve.rs  results.rs
src/issues/: mod.rs
src/mcp/: helpers.rs  json_writer.rs  mod.rs  server.rs  types.rs
src/messages/: mod.rs
src/parsers/: comment.rs  json.rs  jsx.rs  mod.rs
src/rules/: hardcoded.rs  helpers.rs  missing.rs  missing_key.rs  mod.rs  orphan.rs  orphan_key.rs  replica_lag.rs  type_mismatch.rs  unresolved.rs  unresolved_key.rs  untranslated.rs  unused.rs  unused_key.rs
src/types/: context.rs  issue.rs  key_usage.rs  messages.rs  mod.rs  run_result.rs
tests/cli/: baseline.rs  check.rs  clean.rs  fix.rs  init.rs  main.rs
tests/mcp/: main.rs
(+295 files in other folders)
