[package]
name = "glot"
version = "0.5.2"
edition = "2024"
description = "A fast CLI tool for checking i18n issues in Next.js projects"
license = "MIT"
repository = "https://github.com/Sukitly/glotctl"
homepage = "https://github.com/Sukitly/glotctl"
keywords = ["i18n", "next-intl", "nextjs", "internationalization", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "glot"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.56", features = ["derive", "env"] }
colored = "3.1.1"
glob = "0.3.3"
rayon = "1.11"
regex = "1.12"
unicode-width = "0.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
swc_common = { version = "18.0.1", features = ["tty-emitter", "concurrent"] }
swc_ecma_ast = "20.0.1"
swc_ecma_parser = "33.0.1"
swc_ecma_visit = "20.0.0"
walkdir = "2.5.0"

# MCP server dependencies
rmcp = { version = "0.13", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["rt", "macros"] }
schemars = "1.2"
enum_dispatch = "0.3.13"

[dev-dependencies]
insta = { version = "1.46.1", features = ["filters"] }
insta-cmd = "0.6.0"
pretty_assertions = "1.4.1"
tempfile = "3.24.0"



# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
